[gd_scene load_steps=5 format=3 uid="uid://cu1socd5pmftn"]

[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_n071u"]
[ext_resource type="Script" uid="uid://1dwtv40j725c" path="res://overworld_new/campaign_modifier/campaign_modifier.gd" id="2_lt22t"]
[ext_resource type="Script" uid="uid://cocfcmwelj8nc" path="res://ui/shared/general_menu_button/general_menu_button.gd" id="3_sx2wt"]
[ext_resource type="PackedScene" uid="uid://c2ht6vn6wolmv" path="res://ui/shared/general_menu_button/general_menu_button.tscn" id="4_68vs0"]

[node name="CampaignModifier" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n071u")
script = ExtResource("2_lt22t")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.5
offset_top = -66.5
offset_right = 115.5
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select A Difficulty"

[node name="DificultyButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="EasyModeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons"]
layout_mode = 2
toggle_mode = true
text = "Easy"
script = ExtResource("3_sx2wt")
metadata/_custom_type_script = "uid://cocfcmwelj8nc"

[node name="HardModeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons"]
layout_mode = 2
toggle_mode = true
text = "Hard"
script = ExtResource("3_sx2wt")
metadata/_custom_type_script = "uid://cocfcmwelj8nc"

[node name="CustomModeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons"]
visible = false
layout_mode = 2
text = "Custom"
script = ExtResource("3_sx2wt")
metadata/_custom_type_script = "uid://cocfcmwelj8nc"

[node name="SetSeedContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 10

[node name="UpperValueContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer"]
layout_mode = 2

[node name="EnterSeedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/UpperValueContainer"]
layout_mode = 2
text = "Enter Seed:"

[node name="SeedValueLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/UpperValueContainer"]
layout_mode = 2

[node name="KeyboardValueContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer"]
layout_mode = 2
columns = 11

[node name="Button1" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "1"

[node name="Button2" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "2"

[node name="Button3" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "3"

[node name="Button4" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "4"

[node name="Button5" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "5"

[node name="Button6" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "6"

[node name="Button7" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "7"

[node name="Button8" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "8"

[node name="Button9" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "9"

[node name="Button10" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "0"

[node name="BackspaceButton" parent="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("4_68vs0")]
layout_mode = 2
text = "<-"

[node name="BottomContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="EnterSeedHeaderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 9
text = "Enter Seed"

[node name="EnterSeedCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 4

[node name="StartCampaignButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/BottomContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
text = "Start"
script = ExtResource("3_sx2wt")
metadata/_custom_type_script = "uid://cocfcmwelj8nc"

[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/EasyModeButton" to="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/EasyModeButton" method="_on_focus_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/EasyModeButton" to="." method="_on_easy_mode_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/EasyModeButton" to="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/EasyModeButton" method="_on_pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/HardModeButton" to="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/HardModeButton" method="_on_focus_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/HardModeButton" to="." method="_on_hard_mode_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/HardModeButton" to="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/HardModeButton" method="_on_pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/CustomModeButton" to="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/CustomModeButton" method="_on_focus_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/CustomModeButton" to="." method="_on_custom_mode_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/CustomModeButton" to="." method="_on_custom_mode_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/CustomModeButton" to="PanelContainer/MarginContainer/VBoxContainer/DificultyButtons/CustomModeButton" method="_on_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button1" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button2" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button3" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button4" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button5" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button6" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button7" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button8" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button9" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/Button10" to="." method="_add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetSeedContainer/KeyboardValueContainer/BackspaceButton" to="." method="_on_backspace_button_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/BottomContainer/EnterSeedCheckBox" to="." method="_on_enter_seed_check_box_toggled"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/BottomContainer/StartCampaignButton" to="PanelContainer/MarginContainer/VBoxContainer/BottomContainer/StartCampaignButton" method="_on_focus_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BottomContainer/StartCampaignButton" to="." method="_on_start_campaign_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BottomContainer/StartCampaignButton" to="PanelContainer/MarginContainer/VBoxContainer/BottomContainer/StartCampaignButton" method="_on_pressed"]
